// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`selectors select dispatches adding the query and listener 1`] = `
Array [
  Object {
    "meta": Object {
      "queryId": "tacos",
    },
    "payload": Object {
      "get": [Function],
      "id": "tacos",
      "onSnapshot": [MockFunction] {
        "calls": Array [
          Array [
            [Function],
          ],
        ],
      },
      "path": "tacos",
    },
    "type": "firestore/queries/REQUEST",
  },
  Object {
    "meta": Object {
      "queryId": "tacos",
    },
    "payload": undefined,
    "type": "firestore/listeners/ADD",
  },
]
`;

exports[`selectors select returns fetchStatus and user doc 1`] = `
Object {
  "doc": Object {
    "id": "123",
    "type": "delicious",
  },
  "fetchStatus": "loaded",
}
`;

exports[`selectors selectAuth if no userCollection provided, returns empty object 1`] = `
Object {
  "doc": Object {},
  "fetchStatus": "loaded",
}
`;

exports[`selectors selectAuth returns fetchStatus and user doc 1`] = `
Object {
  "doc": Object {
    "id": "123",
    "type": "delicious",
  },
  "fetchStatus": "loaded",
}
`;
